syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime";

message CorfuQueueIdMsg {
    int64 txSequence = 1;
    int64 entryId = 2;
}

message CorfuGuidMsg {
    int64 instanceId = 1;
}

message CorfuQueueMetadataMsg {
    int64 txSequence = 1;
}

enum ReplicationType {
    LOG_ENTRY = 0; // Default value indicating absence of any full sync.
    FULL_SYNC = 1; // This entry was made during a full sync
    LAST_FULL_SYNC_ENTRY = 2; // Last entry denoting the end marker of a full sync
}

// This message forms the value part of the payload used for LogReplication over Routing Queues
message RoutingTableEntryMsg {
    // List of unique destinations from topology.
    repeated string destinations = 1;

    // Specify the replication type for routing queue model.
    ReplicationType type = 2;

    // The actual payload carrying data that will be replicated to the destinations specified.
    bytes opaque_payload = 3;
}
